# izba

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dogfood-app-guide.md  dogfood-context.md  journeys.json  sonar-project.properties
.cargo/: mutants.toml
.claude/agents/: dogfood-gap-fixer.md  journey-compiler.md  trajectory-skeptic.md
.github/workflows/: _artifacts.yml  app.yml  artifacts.yml  ci.yml  conpty-diag.yml  coverage.yml  devbuild.yml  dogfood.yml  e2e.yml  mutants.yml  release.yml
.superpowers/sdd/: task-14-report.md
app/: .gitignore  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
app/dogfood/: inject.d.mts  inject.mjs  real-bridge.js
app/e2e/: about.spec.ts  daemon-errors.spec.ts  fixtures.ts  helpers.ts  logs.spec.ts  manifest.spec.ts  netlog.spec.ts  new-sandbox.spec.ts  overview-actions.spec.ts  policy.spec.ts  rail.spec.ts  shell.spec.ts  startup.spec.ts
app/eslint-rules/: no-raw-control.js
app/src/: App.tsx  theme.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  daemon.rs  fake.rs  lib.rs  views.rs
crates/izba-cli/: Cargo.toml
crates/izba-cli/examples/: consoleprobe.rs
crates/izba-cli/src/: artifacts.rs  main.rs  name.rs  terminal.rs
crates/izba-cli/src/commands/: build.rs  cp.rs  create.rs  daemon.rs  diff.rs  exec.rs  export.rs  lockdown.rs  ls.rs  mod.rs  netlog.rs  policy.rs  port.rs  promote.rs  reconcile.rs  rm.rs  run.rs  sandbox_ref.rs  ssh.rs  ssh_proxy.rs  start.rs  status.rs  stop.rs  version.rs  volume.rs
crates/izba-cli/tests/: create_policy_failures.rs  create_sunlen_failures.rs  daemon_e2e.rs  reconcile_smoke.rs  tty_e2e.rs  tty_scripted.rs
crates/izba-core/: Cargo.toml  build.rs
crates/izba-core/examples/: confine_probe.rs  ttystorm.rs
crates/izba-core/fuzz/: Cargo.toml
crates/izba-core/fuzz/fuzz_targets/: flatten.rs
crates/izba-core/proptest-regressions/image/: flatten.txt
crates/izba-core/src/: artifacts.rs  build_info.rs  ca.rs  cp.rs  discover.rs  lib.rs  liveness.rs  paths.rs  portfwd.rs  procmgr.rs  reconcile.rs  sandbox.rs  state.rs  testutil.rs  volume.rs  vsock.rs
crates/izba-core/src/daemon/: client.rs  mod.rs  proto.rs  registry.rs  relays.rs  server.rs  supervisor.rs  transport.rs
crates/izba-core/src/daemon/egress/: audit.rs  config.rs  dns.rs  dns_snoop.rs  egress.rego  egress_data.json  mitm.rs  mitm_runtime.rs  mod.rs  policy.rs  router.rs  sys_resolver.rs
crates/izba-core/src/image/: erofs.rs  flatten.rs  ingest.rs  mod.rs  pull.rs  runtime_config.rs  store.rs  tags.rs
crates/izba-core/src/jail_account/: builders.rs  dpapi.rs  helper.rs  mod.rs  orchestrate.rs  state.rs
crates/izba-core/src/manifest/: apply.rs  diff.rs  mod.rs  normalize.rs  ops.rs  promote.rs  quantity.rs  schema.rs  store.rs
crates/izba-core/src/procmgr/: confinable.rs  confine.rs  jail_linux.rs  jail_windows.rs  logon.rs  mod.rs  unix.rs  windows.rs
crates/izba-core/src/ssh/: config.rs  identity.rs  mod.rs  settings.rs
crates/izba-core/src/vmm/: cloud_hypervisor.rs  mod.rs  openvmm.rs  spec.rs
crates/izba-core/tests/: egress_mitm.rs  integration.rs
crates/izba-init/: Cargo.toml  build.rs
crates/izba-init/fuzz/: Cargo.toml
crates/izba-init/fuzz/fuzz_targets/: tar_extract.rs
crates/izba-init/proptest-regressions/: tarfs.txt
crates/izba-init/src/: cmdline.rs  egress.rs  exec.rs  lib.rs  main.rs  mounts.rs  net.rs  oci.rs  pause.rs  rwdisk.rs  server.rs  ssh.rs  tarfs.rs  trust.rs
crates/izba-jail-helper/: Cargo.toml
crates/izba-jail-helper/src/: account.rs  dacl.rs  firewall.rs  main.rs  provision.rs  userlist.rs
crates/izba-jail-naming/: Cargo.toml
crates/izba-proto/: Cargo.toml
crates/izba-proto/fuzz/: Cargo.toml
crates/izba-proto/fuzz/fuzz_targets/: dns.rs  frame.rs
crates/izba-proto/src/: codec.rs  dns.rs  lib.rs  messages.rs
crates/izba-ttytest/: Cargo.toml
crates/izba-ttytest/src/: harness.rs  lib.rs  scenarios.rs  scripted_guest.rs
crates/izba-ttytest/tests/: guest_smoke.rs  guest_stream.rs  harness_smoke.rs
docs/: design-lineage.md  dogfooding-value.md  egress-firewall-building-blocks.md  roadmap.md  testing-improvements-roadmap.md  testing.md  vision.md
docs/quality/: mutation-gaps-runbook.md
docs/security/: README.md  egress-firewall-p3-dns-resolve-and-pin.md  findings-2026-06-15.md  methodology.md  policy-state-guest-isolation.md  threat-model.md  windows-vmm-jailer-chromium-reference.md
hack/: README.md  build-crun.sh  build-initramfs.sh  build-kernel.sh  build-mke2fs.sh  build-mkfs-erofs-windows.sh  build-nft.sh  build-passt.sh  build-spike-initramfs.sh  build-sshd.sh  coverage.sh  coverage_report.py  devbuild.sh  fetch-artifacts.sh  fetch-openvmm.sh  kernel.config  mutants-check-excludes.py  mutants-check-excludes.test.py  mutants-gate-run.sh  mutants-gate.sh  mutants-issue.sh  mutants-report.py  mutants-report.test.py  openvmm-vsock-assert.patch  sshd_config  stage-izba-windows.sh  test_coverage_report.py  verify-mkfs-erofs-parity.sh
hack/ci/: conpty-diag.ps1  stage-conpty.ps1  ttystorm-gate.ps1  ttystorm-gate.sh
hack/dogfood/: README.md  ledger.jsonl  local-harness.md  model.py  oracles.py  run_journeys.py  summarize_bundle.py  test_corpus.py  test_ledger.py  test_model.py  test_oracles.py  test_runner.py  test_schema_gui.py  test_summarize.py
hack/mingw-compat/: erofs_mingw.c  erofs_mingw.h  regex.h
hack/spike/: README-crun-userns-virtiofs-spike.md  crun-userns-virtiofs-spike-init.sh  crun-userns-virtiofs-spike.sh  izba-client.ps1  validate-izba-windows.ps1  verify-mkfs-erofs-parity.ps1  whp-local-account-spike.ps1
hack/spike/vsock-echo/: Cargo.toml
hack/spike/vsock-echo/src/: main.rs
packaging/: build-deb.sh
packaging/debian/: control.template
packaging/windows/: izba.iss
sdd/: final-fixwave-report.md  sonar-refactor-report.md  sonar-refactor2-report.md  task-10-report.md
(+251 files in other folders)
