[workspace]
resolver = "2"
members = ["crates/izba-proto", "crates/izba-core", "crates/izba-cli", "crates/izba-init", "crates/izba-ttytest", "crates/izba-jail-helper", "crates/izba-jail-naming"]
exclude = ["app/src-tauri", "crates/izba-proto/fuzz", "crates/izba-core/fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
