[workspace]

[package]
name = "izba-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Emits VERGEN_* for THIS (app) binary's own git/build provenance.
vergen-gitcl = { version = "10", features = ["build", "cargo", "rustc"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Embedded directly (not via the CLI): Task 2 wires DaemonClient through this.
izba-core = { path = "../../crates/izba-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
