[workspace]

[package]
name = "izba-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# The `headless` dogfood-bridge [[bin]] below makes this a multi-bin package;
# `tauri build` (devbuild/release installers) needs the main binary named
# explicitly or it aborts with "failed to find main binary".
default-run = "izba-app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Emits VERGEN_* for THIS (app) binary's own git/build provenance.
vergen-gitcl = { version = "10", features = ["build", "cargo", "rustc"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
# Embedded directly (not via the CLI): Task 2 wires DaemonClient through this.
izba-core = { path = "../../crates/izba-core" }
# Wire types for the interactive shell stream (Exec/Attach/Resize frames).
izba-proto = { path = "../../crates/izba-proto" }
# Dogfood bridge sidecar transport (sync WebSocket; test/dogfood only).
tungstenite = "0.24"

[[bin]]
name = "headless"
path = "src/bin/headless.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]
