[package]
name = "izba-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Internal application crate — never published to crates.io. Marking it private
# lets cargo-deny's `allow-wildcard-paths` exempt its `version = "*"` path deps
# on sibling crates (the wildcard ban only skips path deps for private crates).
publish = false

[features]
# Opt-in: builds the PTY/ConPTY terminal tests (pulls portable-pty/vt100 via the
# izba-ttytest dev-dependency). Kept off by default so the six standard build
# gates never cross-compile the harness.
ttytests = []

[[bin]]
name = "izba"
path = "src/main.rs"

[[test]]
name = "tty_scripted"
required-features = ["ttytests"]

[[test]]
name = "tty_e2e"
required-features = ["ttytests"]

[dependencies]
izba-core = { path = "../izba-core" }
izba-proto = { path = "../izba-proto" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
mutants = "0.0.4"

[dev-dependencies]
izba-ttytest = { path = "../izba-ttytest" }
izba-proto = { path = "../izba-proto" }
portable-pty = "0.9"
anyhow = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term"] }
signal-hook = "0.3"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
] }
