[package]
name = "izba-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
izba-proto = { path = "../izba-proto" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt"] }
sha2 = "0.10"
hex = "0.4"
which = "7"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
uds_windows = "1.1"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
