[package]
name = "izba-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
izba-proto = { path = "../izba-proto" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
sha2 = "0.10"
hex = "0.4"
which = "7"
futures-util = "0.3"

# --- M2 TLS-MITM datapath (salvaged from NVIDIA/OpenShell, Apache-2.0) ---
# rustls/tokio-rustls/rcgen pinned to the ring CryptoProvider: ring
# cross-compiles to x86_64-pc-windows-gnu without a C toolchain dance
# (aws-lc-sys is the risk we avoid). default-features=false drops aws-lc-rs.
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
# Mozilla CA roots so the MITM verifies real upstreams (pure data, cross-compiles).
webpki-roots = "0.26"
# Pre-bind a loopback source so the router registers the dst BEFORE connecting
# to the MITM listener (register-before-connect: no race with the accept claim).
socket2 = "0.5"

# --- M2 egress policy engine: regorus = Microsoft's pure-Rust OPA/Rego
# interpreter. `arc` is REQUIRED so Engine is Send+Sync (Rc otherwise);
# std/regex/glob give the eval surface the docker-mitm-bridge policy uses.
# Pinned to 0.4 (cached + proven by the spike); the embedding API
# (add_policy/add_data_json/set_input_json/eval_bool_query) is identical in the
# current 0.10 — bump when convenient (CI has network).
regorus = { version = "0.4", default-features = false, features = ["std", "arc", "regex", "glob"] }

[dev-dependencies]
# in-memory duplex test driver for the MITM datapath needs a real runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
uds_windows = "1.1"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
] }
