[package]
name = "izba-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Internal application crate — never published to crates.io. Marking it private
# lets cargo-deny's `allow-wildcard-paths` exempt its `version = "*"` path deps
# on sibling crates (the wildcard ban only skips path deps for private crates).
publish = false

[build-dependencies]
# Emits VERGEN_* build metadata (git describe/sha, build date, rustc, target).
# `gitcl` shells out to the host `git` so it works for every target (musl,
# windows-gnu cross) and degrades gracefully when `.git` is absent.
vergen-gitcl = { version = "10", features = ["build", "cargo", "rustc"] }

[dependencies]
izba-proto = { path = "../izba-proto" }
izba-jail-naming = { path = "../izba-jail-naming" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
flate2 = "1"
tar = "0.4"
tempfile = "3"
oci-client = { version = "0.17.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "net", "io-util", "time"] }
sha2 = "0.10"
hex = "0.4"
which = "7"
futures-util = "0.3"
# Human-readable timestamps for the egress audit view (`izba netlog`). Already
# in the tree via oci-client; declared direct so audit.rs can format ts_ms.
chrono = { version = "0.4", default-features = false, features = ["std"] }

# --- M2 TLS-MITM datapath (salvaged from NVIDIA/OpenShell, Apache-2.0) ---
# rustls/tokio-rustls/rcgen pinned to the ring CryptoProvider: ring
# cross-compiles to x86_64-pc-windows-gnu without a C toolchain dance
# (aws-lc-sys is the risk we avoid). default-features=false drops aws-lc-rs.
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "tls12", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
# PEM decode via rustls-pki-types' `pem` module (the `std` feature enables it,
# pulling in `alloc`); replaces the unmaintained rustls-pemfile (RUSTSEC-2025-0134).
rustls-pki-types = { version = "1", features = ["std"] }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "pem", "ring"] }
# Mozilla CA roots so the MITM verifies real upstreams (pure data, cross-compiles).
webpki-roots = "0.26"
# Pre-bind a loopback source so the router registers the dst BEFORE connecting
# to the MITM listener (register-before-connect: no race with the accept claim).
socket2 = "0.5"

# --- M2 egress policy engine: regorus = Microsoft's pure-Rust OPA/Rego
# interpreter. `arc` is REQUIRED so Engine is Send+Sync (Rc otherwise);
# std/regex/glob give the eval surface the docker-mitm-bridge policy uses.
# Pinned to 0.4 (cached + proven by the spike); the embedding API
# (add_policy/add_data_json/set_input_json/eval_bool_query) is identical in the
# current 0.10 — bump when convenient (CI has network).
regorus = { version = "0.4", default-features = false, features = ["std", "arc", "regex", "glob"] }

# DNS-snoop (tier-2): parse A/AAAA + TTL out of the resolver's responses to
# recover FQDNs for the non-HTTP egress allow-list. default-features=false keeps
# it a pure wire parser (no tokio/runtime) and cross-compiles to windows-gnu.
hickory-proto = { version = "0.26", default-features = false, features = ["std"] }
# Terminating system resolver with live config reload (replaces the
# start-time-captured UDP forwarder; self-heals on VPN/network change).
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
# Cross-platform interface/IP change events (netlink on Linux, IP Helper on
# Windows) — proactive reload trigger. Pure-Rust; cross-compiles to windows-gnu.
if-watch = { version = "3", features = ["tokio"] }

# Per-sandbox `--policy` config parse (mirrors the user's docker-mitm-bridge
# data.yml shape). serde_yaml 0.9 is archived-but-final + pure Rust.
serde_yaml = "0.9"

# --- M2 MITM HTTP engine: hyper-util auto server (h1+h2) + per-request policy.
# Replaces the hand-rolled request sniffer; all already transitive via
# reqwest/oci-client, so no new cargo-deny surface. Pure-Rust + rustls/ring →
# x86_64-pc-windows-gnu cross stays green.
hyper = { version = "1", default-features = false, features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
# Body/byte buffers shared between synthesized 403 responses and proxied bodies.
bytes = "1"

[dev-dependencies]
# in-memory duplex test driver for the MITM datapath needs a real runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "time"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "resource", "sched"] }

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"
uds_windows = "1.1"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    # WHvCreatePartition/WHvDeletePartition for the confine_probe capability gate
    # (confinement must NOT break WHP). winhvplatform.dll, link-only.
    "Win32_System_Hypervisor",
] }
