[package]
name = "izba-init"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
izba-proto = { path = "../izba-proto" }
anyhow.workspace = true
nix = { version = "0.29", features = [
    "fs",
    "hostname",
    "mount",
    "poll",
    "process",
    "reboot",
    "sched",
    "signal",
    "term",
    "user",
] }
libc = "0.2"
vsock = "0.5"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
