[package]
name = "izba-jail-helper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Internal application crate — never published to crates.io.
publish = false

[[bin]]
name = "izba-jail-helper"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
