[package]
name = "izba-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Internal application crate — never published to crates.io. Marking it private
# lets cargo-deny's `allow-wildcard-paths` exempt its `version = "*"` path deps
# on sibling crates (the wildcard ban only skips path deps for private crates).
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
