[package]
name = "izba-ttytest"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
izba-proto = { path = "../izba-proto" }
izba-core = { path = "../izba-core" }
anyhow.workspace = true
serde_json.workspace = true
portable-pty = "0.9"
vt100 = "0.16"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.1"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[[bin]]
name = "ttyfixture"
path = "src/bin/ttyfixture.rs"
