[package]
name = "izba-proto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
izba-proto = { path = ".." }

# Fuzz targets are binaries — not part of the workspace, not tested, not documented.
[[bin]]
name = "frame"
path = "fuzz_targets/frame.rs"
test = false
doc = false

[[bin]]
name = "dns"
path = "fuzz_targets/dns.rs"
test = false
doc = false

# Prevent this from interfering with the workspace.
[workspace]
