[package]
name = "izba-proto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
izba-proto = { path = ".." }
# read_frame is generic over the payload type; the `frame` target fuzzes the
# framing with arbitrary JSON via serde_json::Value (izba-proto parses frame
# payloads with serde_json, so this matches the real decode path).
serde_json = "1"

# Fuzz targets are binaries — not part of the workspace, not tested, not documented.
[[bin]]
name = "frame"
path = "fuzz_targets/frame.rs"
test = false
doc = false

[[bin]]
name = "dns"
path = "fuzz_targets/dns.rs"
test = false
doc = false

# Prevent this from interfering with the workspace.
[workspace]
